--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 <body>
 
     <!-- Loader  -->
-<div class="loading-parent">
+<!-- <div class="loading-parent">
     <div class="loader">
         <canvas width="480px" height="480px" id="loader"></canvas>
         <h1>Loading</h1>
     </div>
-</div>
+</div> -->
 <!-- Mobile Menu -->
 <div class="mobile-menu hide-pc">
     <div class="btnClose icon fa fa-times-circle align-center flex-center"></div>
